--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
   <body>
 
 
-    
+    <form action="">
+      <input type="text" id = "name" placeholder="Введите ваше имя">
+      <input type="text" id = "subname"  placeholder="Введите вaшу фамилию">
+      <input type="email"id = "email" placeholder="Введите вaш email">
+      <button type="submit" id="btn">Отправить</button>
+    </form>
 
     
     <script src="/main.js"></script>
