--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae rerum, nobis quasi voluptatibus quaerat sit. Quae dolorum dolorem aspernatur nobis asperiores maiores debitis necessitatibus? Quo at velit dolore deleniti, ipsa ducimus laboriosam saepe soluta aperiam nostrum expedita nihil, quas voluptas cum incidunt fugiat consequatur eaque odit doloribus error. Veniam nemo velit, maxime autem recusandae quasi aliquid voluptas dignissimos quod? Sapiente?
             </div>
             <div class="header__content_button">
-            <button>
-              <a href="#">Заказать</a>
-            </button>
+              <button name="button">Заказать</button>
             </div> 
          </div>
         </div>
