--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
         </div>
       </section>
 
+      <div class="section-primery">
+        <div class="container section-primery__container">
+          <h2 class="taitl section-primery_taitl ">
+            Преимущества нашего обучения
+          </h2>
+        </div>
+      </div>
+
 
 
     <!-- ----------/wrapper -->
