--- a/project1/01.html
+++ b/project1/01.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/project1/01.css">
     <title>Document</title>
   </head>
   <body>
@@ -54,10 +54,21 @@
           <div class="cards cards-wrapper">
             <div class="card card-wrapper ">
               <img src="https://img.freepik.com/premium-vector/vector-slice-of-pizza-with-cheese-delicious-italian-pizza-with-tomatoes-olives-mozzarella-and-basil_651519-26.jpg" alt="" class="card_img">
+              <div class="card-info">
+                <p data-taitl="taitl">
+                  ПИЦА PEPEROTY
+                </p>
+                <p class="price">
+                  390 руб
+                </p>
+              </div>             
               <div class="card-body">
                 <p data="minys">-</p>
                 <p data="res">1</p>
                 <p data="plys">+</p>
+              </div>
+              <div class="card_btn">
+                <input type="button" name="btn" value="В корзину">
               </div>
             </div>
             <div class="card card-wrapper ">
@@ -90,6 +101,6 @@
      
 
     
-    <script src="/test.js"></script>
+    <script src="/project1/01.js"></script>
   </body>
 </html>
