--- a/projectTest/index.html
+++ b/projectTest/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>
-        В данном проекте тренируюсь работать с javaScript
+        Здесь я просто тренеруюсь
     </h1>
     
     <script src="main.js"></script>
