--- a/projectTest/index.html
+++ b/projectTest/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>
-        Здесь я просто тренеруюсь
+        Работаю с задачами в заметках!
     </h1>
     
     <script src="main.js"></script>
