--- a/projectTest/index.html
+++ b/projectTest/index.html
@@ -11,6 +11,14 @@
     <h1>
         Работаю с задачами в заметках!
     </h1>
+
+    <div class="box">
+        <div class="items">1 элемент</div>
+        <div class="items">2 элемент</div>
+        <div class="items">3 элемент</div>
+        <div class="items">4 элемент</div>
+        <div class="items">5 элемент</div>
+    </div>
     
     <script src="main.js"></script>
 </body>
