--- a/projectTest3/index.html
+++ b/projectTest3/index.html
@@ -9,7 +9,8 @@
 <body>
 
     <button class="btn1" data-color = "red" >Первая кнопка</button>
-    
+    <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, explicabo. Eligendi aperiam iste ducimus fugit blanditiis? Sequi, modi quis iusto, magnam quos, rerum aperiam saepe deserunt rem vero error quibusdam!</p>
+    <button class="btn2" data-color = "green">Вторая кнопка</button>
 
 
 
